set(cp_source_files
  cp.c
  cp.h
  cp_common.c
)
add_library(cp ${cp_source_files})

include(FindCERCSProject)
FIND_CERCS_PROJECT (cercs_env LIBRARY cercs_env INCLUDES cercs_env.h REQUIRED ${CERCS_USE_INSTALLED})
FIND_CERCS_PROJECT (atl LIBRARY atl INCLUDES atl.h REQUIRED ${CERCS_USE_INSTALLED})
FIND_CERCS_PROJECT (ffs LIBRARY ffs INCLUDES ffs.h REQUIRED ${CERCS_USE_INSTALLED})
FIND_CERCS_PROJECT (evpath LIBRARY evpath INCLUDES evpath.h REQUIRED ${CERCS_USE_INSTALLED})
FIND_CERCS_PROJECT(dill LIBRARY dill INCLUDES dill.h ${CERCS_USE_INSTALLED})

find_package(MPI COMPONENTS C REQUIRED)
find_package (Threads REQUIRED)

target_include_directories(cp PUBLIC ${MPI_C_INCLUDE_PATH} ..)

list (APPEND INC_DIRS ${EVPATH_INCLUDE_DIR} ${CERCS_ENV_INCLUDE_DIR} ${ATL_INCLUDE_DIR} ${FFS_INCLUDE_DIR})
list (APPEND LIB_DIRS ${EVPATH_LIB_DIR} ${CERCS_ENV_LIB_DIR} ${ATL_LIB_DIR} ${FFS_LIB_DIR})
list (APPEND LINK_ARGS -L${EVPATH_LIB_DIR} -L${CERCS_ENV_LIB_DIR} -L${ATL_LIB_DIR} -L${FFS_LIB_DIR})
list (APPEND BASE_LIBS ${EVPATH_LIBRARIES} ${CERCS_ENV_LIBRARIES} ${ATL_LIBRARIES} ${FFS_LIBRARIES})


find_package(evpath)

target_link_libraries(cp dp ${LINK_ARGS} ${EVPATH_LIBRARIES} ${MPI_C_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})